Closed Bug 570065 Opened 15 years ago Closed 15 years ago

Fix string member declaration in AutoCompleteResult

Categories

(Camino Graveyard :: Location Bar & Autocomplete, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: stuart.morgan+bugzilla, Assigned: stuart.morgan+bugzilla)

References

Details

Attachments

(1 file)

The members are declared mutable, but treated as non-mutable in various assignments.
Assignee: nobody → stuart.morgan+bugzilla
Blocks: 569778
Status: NEW → ASSIGNED
Attached patch fixSplinter Review
The fix is so trivial I'm not even going to bother with review.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: