Camino only - Bug 570065: Fix member variable types to fix a warning with the 10.5 SDK. rs=hyatt